--- a/Home/01_HTML/Base/index2.html
+++ b/Home/01_HTML/Base/index2.html
@@ -11,6 +11,10 @@
     
 <ol>
     <li><strong>Вторник.</strong>Выбили <a href="https://www.onliner.by/">немцев</a> с опушки. Засели в доме лесника</li>
+<li><strong>Среда.</strong>Мощная контратака немцев вынудила нас оставить заранее занятые позиции.</li>
+<li><strong>Четверг.</strong>Под покровом ночи смогли снова засесть в доме лесника. Курим "Беломор".</li>
+<li><strong>Пятница.</strong>Вернулся лесник и всех выгнал.</li>
 </ol>
+&copy;Бородатый <a href="https://www.it-academy.by/">анекдот</a>
 </body>
 </html>
