--- a/Home/01_HTML/Base/VIZBOR/vizbor.html
+++ b/Home/01_HTML/Base/VIZBOR/vizbor.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Юрий Визбор</h1>
+    <h2>Вечно студент</h2>
+    <br>
+    <a href="vechno_student.html#top" target="_blank" title="читать сначала">читать сначала</a>
+<br>
+    <a href="vechno_student.html#down" target="_blank" title="читать с последнего абзаца">читать с последнего абзаца</a>
 </body>
 </html>
