--- a/Home/02_HTML/Base/Childbook/Childbook.html
+++ b/Home/02_HTML/Base/Childbook/Childbook.html
@@ -7,7 +7,27 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="car.jpg" alt="car"  title="Car">
-    
+    <img src="car.jpg" alt="car" title="Car"> <!--Формат был выбран исходя из малого размера, и наличия полноцветного изображения-->
+<p>За рулем сижу довольный - <br>
+    Ездить просто и легко! <br>
+    Только руль чуть-чуть огромный <br>
+    И педали далеко.
+</p>
+<img src="train.jpg" alt="train" title="Train"> <!--Формат выбран из-за малого размера и отсутствия видимой разницы с png-->
+<p>
+  Мне купили <strong>паровозик</strong>  <br>
+  Cразу два вагона возит. <br>
+  Я включу его, и он <br>
+  За собой везет вагон. <br>
+  Вот бы мне в нем прокатиться, <br>
+  Только жаль - не поместиться.
+</p>
+<img src="colors.gif" alt="Paints" title="Paints"> <!--Формат выбран из-за простоты картинки-->
+<p>
+    Нарисую я в альбоме <br>
+    <em>Голубое</em> море, <br>
+    <em>Белый</em> парус над волною <br>
+    Бьется на просторе.
+</p>
 </body>
 </html>
