--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>
+        01_HTML <a href="/Home/01_HTML/Base/Diary/index2.html" title="Diary" target="_blank">Diary</a>
+    </p>
 </body>
 </html>
