--- a/Home/01_HTML/Add/tegs.html
+++ b/Home/01_HTML/Add/tegs.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Редкие теги</h1>
+    <dl>
+      <dt>Теги  &lt; dl&gt; &lt; dt&gt; &lt;dd&gt;  </dt>  
+   <dd>Используются для удобного отображения определений</dd>
+    </dl>
+    <br>
+    <dl>
+    <dt> Тег &lt;pre&gt; </dt>
+    <dd> Позволяет располагать в тексте любое количество визуально определяемых "пробелов". <br>
+  <pre> я    шел   по     улице.</pre></dd>
+    </dl>
+    <br>
     
 </body>
 </html>
