--- a/Home/01_HTML/Add/tegs.html
+++ b/Home/01_HTML/Add/tegs.html
@@ -19,6 +19,16 @@
   <pre> я    шел   по     улице.</pre></dd>
     </dl>
     <br>
+    <dl>
+        <dt>Тег &lt;code&gt;</dt>
+        <dd>Позволяет отображать символы, представляющие собой программный код. Например: <br>
+        <code>function checkParent (src, dest)</code> </dd>
+    </dl>
+    <dl>
+        <dt>Тег &lt;gbt&gt;</dt>
+        <dd>Позволяет визуально отделять часть текста, имеющую названия клавиш компьютера. Например: <br>
+        Нажмите &lt;alt&gt + &lt;ctrl&gt + &lt;del&gt;</dd>
+    </dl>
     
 </body>
 </html>
