--- a/Home/01_HTML/Add/tegs.html
+++ b/Home/01_HTML/Add/tegs.html
@@ -29,6 +29,27 @@
         <dd>Позволяет визуально отделять часть текста, имеющую названия клавиш компьютера. Например: <br>
         Нажмите &lt;alt&gt + &lt;ctrl&gt + &lt;del&gt;</dd>
     </dl>
-    
+    <br>
+    <dl>
+        <dt>Тег &lt;var&gt;</dt>
+        <dd>Позволяет визуально отображать написание переменных компьютерных программ. Например: <br>
+        При использовании <var>Photoshop будьте внимательны к мелочам.</var></dd>
+    </dl>
+    <br>
+    <dl>
+        <dt>Теги &lt;sup&gt; и &lt;sub&gt; соответственно: </dt>
+        <dd> Позволяют отображать шрифты верхнего и нижнего индексов. Например:<br>
+       Решим уравнение <pre>Х<sup>2</sup>+Y<sup>2</sup>         <p>Формула углекислого газа - СО<sub>2</sub></p></pre></dd> 
+    </dl>
+    <br>
+<dl>
+    <dt>Теги &lt;blockquote&gt; и &lt;q&gt; соответственно:
+        Предначзначены для выделения цитат с помощью отступов и выравниваний и с помощью кавычек. Например:
+    <blockquote>Быть человеком - смое большое в мире искусство.</blockquote> <br>
+и <br>
+<q>Друзья познаются в беде.</q></dt>
+<br>
+</dl>
+
 </body>
 </html>
