--- a/Home/01_HTML/Add/tegs.html
+++ b/Home/01_HTML/Add/tegs.html
@@ -43,13 +43,25 @@
     </dl>
     <br>
 <dl>
-    <dt>Теги &lt;blockquote&gt; и &lt;q&gt; соответственно:
-        Предначзначены для выделения цитат с помощью отступов и выравниваний и с помощью кавычек. Например:
-    <blockquote>Быть человеком - смое большое в мире искусство.</blockquote> <br>
-и <br>
-<q>Друзья познаются в беде.</q></dt>
+    <dt>Теги &lt;blockquote&gt; и &lt;q&gt; соответственно:</dt>
+       <dd> Предначзначены для выделения цитат с помощью отступов и выравниваний и с помощью кавычек. Например:
+    <blockquote>Быть человеком - самое большое в мире искусство.</blockquote> <br>
+и <br> <br>
+<q>Друзья познаются в беде.</q></dd>
 <br>
 </dl>
-
+<dl>
+    <dt>Теги &lt;ins&gt; и &lt;del&gt; </dt>
+    <dd>Предназначены для <del>зачеркивания</del> и <ins>подчеркивания</ins> информации.</dd>
+</dl>
+<dl>
+    <dt>Тег &lt;address&gt; </dt>
+    <dd>Предназначен для выделения информации об авторе, - в первую очередь, для поисковых роботов, например, <address>этот материал был создан Ивановым Иваном</address></dd>
+</dl>
+<br>
+<dl>
+    <dt>Теги &lt;nobr&gt; и &lt;wbr&gt; </dt>
+    <dd>1 - не допускает переносов слов. 2 - Указывает возможные места для переносов,если они потребуются.</dd>
+</dl>
 </body>
 </html>
