--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <p>
         01_HTML <a href="Home/01_HTML/Base/VIZBOR/vizbor.html" title="vizbor" target="_blank">vizbor</a>
     </p>
+    <p>
+        01_HTML <a href="Home/01_HTML/Add/tegs.html" title="oldtags" target="_blank">Oldtags</a>
+    </p>
     <p> 
         02_HTML <a href="Home/02_HTML/Base/Childbook/Childbook.html" title="childbook" target="_blank">Childbook</a>
     </p>
