--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         01_HTML <a href="Home/01_HTML/Base/VIZBOR/vizbor.html" title="vizbor" target="_blank">vizbor</a>
     </p>
     <p>
+        01_HTML Файлы проверены валидатором.
+    </p>
+    <p>
         01_HTML <a href="Home/01_HTML/Add/tegs.html" title="oldtags" target="_blank">Oldtags</a>
     </p>
     <p> 
