--- a/Home/02_HTML/Add/WebP.html
+++ b/Home/02_HTML/Add/WebP.html
@@ -14,13 +14,13 @@
           или же когда требуется экстремально низкий размер изображения.
     <br>Ниже - примеры:
         </p>
-        <img src="Home/02_HTML/Add/mikki-rurg-v-jpg.webp" title="JPG">
-        <img src="Home/02_HTML/Add/mikki-rurg-v-webm.webp" title="WebP">
+        <img src="mikki-rurg-v-jpg.webp" title="JPG">
+        <img src="mikki-rurg-v-webm.webp" title="WebP">
 <br>
-<img src="Home/02_HTML/Add/osenniy-les-v-jpg.webp" title="JPG">
-<img src="Home/02_HTML/Add/osenniy-les-v-webm.webp" title="WebP">
+<img src="osenniy-les-v-jpg.webp" title="JPG">
+<img src="osenniy-les-v-webm.webp" title="WebP">
 <br>
-<img src="Home/02_HTML/Add/rgb-v-nizkom-kachestve-v-jpg.webp" title="JPG">
-<img src="Home/02_HTML/Add/rgb-v-nizkom-kachestve-v-webm.webp" title="WebP">
+<img src="rgb-v-nizkom-kachestve-v-jpg.webp" title="JPG">
+<img src="rgb-v-nizkom-kachestve-v-webm.webp" title="WebP">
 </body>
 </html>
