--- a/Home/02_HTML/Add/WebP.html
+++ b/Home/02_HTML/Add/WebP.html
@@ -22,5 +22,6 @@
 <br>
 <img src="rgb-v-nizkom-kachestve-v-jpg.webp" title="JPG">
 <img src="rgb-v-nizkom-kachestve-v-webm.webp" title="WebP">
+<h2>Воспроизводится WebP в Google Chrome, Safari, FireFox</h2>
 </body>
 </html>
