--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
     <p> 
         02_HTML <a href="Home/02_HTML/Base/Childbook/Childbook.html" title="childbook" target="_blank">Childbook</a>
     </p>
+    <p>
+        02_HTML <a href="Home/02_HTML/Add/WebP.html" title="WebP" target="_blank">WebP</a>
+    </p>
 </body>
 </html>
