--- a/Home/01_HTML/Add/izdevatelstvo.html
+++ b/Home/01_HTML/Add/izdevatelstvo.html
@@ -8,6 +8,16 @@
 </head>
 <body>
     <h1 align="center" >Заголовок первого уровня</h1>
+   <h3>Предварительно форматированный текст:</h3> 
+   <pre>
+      x | O | 
+    ------------
+        | X |
+    ------------
+      O | X | O  
+    </pre> <br> <hr>
+
+    
 
 </body>
 </html>
