--- a/Home/01_HTML/Add/izdevatelstvo.html
+++ b/Home/01_HTML/Add/izdevatelstvo.html
@@ -17,7 +17,9 @@
       O | X | O  
     </pre> <br> <hr>
 
-    
+    <h3>Тег address</h3>
+    <p> <address> Kuprevicha 1/1 220141 Minsk Belarus Phone: +375.17.2686911</address> </p>
+<br> <hr>
 
 </body>
 </html>
