--- a/Home/01_HTML/Add/izdevatelstvo.html
+++ b/Home/01_HTML/Add/izdevatelstvo.html
@@ -20,6 +20,12 @@
     <h3>Тег address</h3>
     <p> <address> Kuprevicha 1/1 220141 Minsk Belarus Phone: +375.17.2686911</address> </p>
 <br> <hr>
+<h3>Семантические и функциональные строчные теги</h3>
+<p>Пожелания автора:<br>
+   <span style="color:red"><del>Данный текст убрать из монографии</del></span> и заменить его на <span style="color:green"><ins>вновь помещенный текст.</ins></span>
+</p>
+<hr>
+<h3>Работа со строчными и блоковыми цитатами</h3>
 
 </body>
 </html>
