--- a/Home/01_HTML/Add/izdevatelstvo.html
+++ b/Home/01_HTML/Add/izdevatelstvo.html
@@ -26,6 +26,67 @@
 </p>
 <hr>
 <h3>Работа со строчными и блоковыми цитатами</h3>
-
+<p> Цитата короткая: <br>
+  <q>
+    И все-таки она вертится!
+  </q>
+  </p>
+<p>
+  Цитата, занимающая несколько предложений: <blockquote>
+    О, сколько нам открытий чудных <br>
+    Готовят просвященья дух <br>
+    И опыт, сын ошибок трудных, <br>
+    И гений, парадоксов друг, <br>
+    И случай, Бог изобретатель...
+  </blockquote>
+</p>
+<hr>
+<h3>Семантические и функциональные строчные теги</h3>
+<p>
+  <strong>Тег &lt;STRONG&gt; делает данный фрагмент текста более важным.</strong>
+  <em>Тэг &lt;em&gt; менее важным.</em> <br>
+  В то время как тэги &lt;b&gt; и &lt;i&gt; делают текст просто <b>полужирным</b> и <i>курсивом</i> соответственно.
+</p>
+<hr>
+<h3>Тэги форматирования машинного текста</h3>
+<p>При выполнении программного кода на языке PERL
+  <code> <br>
+    #!/usr/local/bin/perl <br>
+     print "Content‐type: text/html\n\n";<br>
+      print "&lt;H1&gt;Hello World&lt;H1&gt;\n";
+      </code>
+      <p>Программа выведет:</p>
+      <p><i>Hello, World!</i></p>
+      <p>Однако в браузере у нас будет отображаться результат выполнения этой программы:</p>
+      <h2>Hello, World!</h2>
+    </p>
+    <hr>
+    <h3>Комментарии и мнемоники (литералы) в HTML:</h3>
+    <pre>&lt;!-- это комментарий --&gt;</pre><br>
+    <p> <pre>                        &lt;!-- и это также комментарий, <br>
+                             занимающий более одной строки --&gt; </pre></p>
+<hr>
+<h3>Теги над- и подстрочных символов</h3>
+<p align="center">
+  <strong>Магазин работает:</strong>
+  <br>
+  с 08<sup><ins>30</ins></sup> до 18 <sup><ins>30</ins></sup><br>
+  Обед с 13 <sup><ins>00</ins></sup> до 14 <sup><ins>00</ins></sup><br>
+Выходной: <ins>суббота,</ins> <ins>воскресенье</ins>
+</p>
+<hr>
+<h3>Вот такой текст</h3>
+<div style="font-size: 17px"> <pre><strong>
+ Э о  р с о  е ё ы  т к т
+  т  п о т  в с л й  е с
+</strong></pre></div>
+<hr>
+<h3>Акроним и курсив</h3>
+<p>
+  ТФ=Y(x)=e<sup>-iпx</sup>+log<sub>x</sub>4
+</p> <hr>
+<h3>Тег SMALL внутри абзаца</h3>
+<p align="right"> <small>Создано при помощи блокнота &copy;</small>
+</p>
 </body>
 </html>
