--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <p>
         01_HTML <a href="Home/01_HTML/Add/tegs.html" title="oldtags" target="_blank">Oldtags</a>
     </p>
+   <p>
+    01_HTML <a href="Home/01_HTML/Add/izdevatelstvo.html" title="Add_task_new" target="_blank">Add_task_new</a>
+   </p>
+   
     <p> 
         02_HTML <a href="Home/02_HTML/Base/Childbook/Childbook.html" title="childbook" target="_blank">Childbook</a>
     </p>
