--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
 <body>
     <p>
         01_HTML <a href="Home/01_HTML/Base/Diary/index2.html" title="Diary" target="_blank">Diary</a>
-    </p>
+     <span style="color:green"> Checked</span></p>
     <p>
         01_HTML <a href="Home/01_HTML/Base/VIZBOR/vechno_student.html" title="vechno_student" target="_blank">vechno_student</a>
-    </p>
+        <span style="color:green"> Checked</span></p>
     <p>
         01_HTML <a href="Home/01_HTML/Base/VIZBOR/vizbor.html" title="vizbor" target="_blank">vizbor</a>
-    </p>
+        <span style="color:green"> Checked</span></p>
     <p>
         01_HTML Файлы проверены валидатором.
-    </p>
+        <span style="color:green"> Checked</span></p>
     <p>
         01_HTML <a href="Home/01_HTML/Add/tegs.html" title="oldtags" target="_blank">Oldtags</a>
-    </p>
+        <span style="color:green"> Checked</span></p>
    <p>
     01_HTML <a href="Home/01_HTML/Add/izdevatelstvo.html" title="Add_task_new" target="_blank">Add_task_new</a>
-   </p>
+    <span style="color:red"> Dont Checked</span></p>
    
     <p> 
         02_HTML <a href="Home/02_HTML/Base/Childbook/Childbook.html" title="childbook" target="_blank">Childbook</a>
-    </p>
+        <span style="color:green"> Checked</span></p>
     <p>
         02_HTML <a href="Home/02_HTML/Add/WebP.html" title="WebP" target="_blank">WebP</a>
-    </p>
+        <span style="color:green"> Checked</span></p>
 </body>
 </html>
