--- a/Home/03_HTML/Base/Font.html
+++ b/Home/03_HTML/Base/Font.html
@@ -7,6 +7,29 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Шрифты</h1>
+    <h2>Есенин С.А. - Даль подернулась туманом…</h2>
+
+<p>Даль подернулась туманом,<br>
+Чешет тучи лунный гребень.<br>
+Красный вечер за куканом<br>
+Расстелил кудрявый бредень.</p>
+
+<p>Под окном от скользких ветел<br>
+Перепельи звоны ветра.<br>
+Тихий сумрак, ангел теплый,<br>
+Напоен нездешним светом.</p>
+
+<p>Сон избы легко и ровно<br>
+Хлебным духом сеет притчи.<br>
+На сухой соломе в дровнях<br>
+Слаще меда пот мужичий.</p>
+
+<p>Чей-то мягкий лик за лесом,<br>
+Пахнет вишнями и мохом…<br>
+Друг, товарищ и ровесник,<br>
+Помолись коровьим вздохам.</p>
+
+1916
 </body>
 </html>
