--- a/Home/03_HTML/Base/Font.html
+++ b/Home/03_HTML/Base/Font.html
@@ -5,31 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="FONTS/font1/stylesheet.css">
+<link rel="stylesheet" href="FONTS/font2/stylesheet.css">
 </head>
 <body>
     <h1>Шрифты</h1>
     <h2>Есенин С.А. - Даль подернулась туманом…</h2>
 
-<p>Даль подернулась туманом,<br>
+<p style="font-family: 'Montserrat', sans-serif;">Даль подернулась туманом,<br>
 Чешет тучи лунный гребень.<br>
 Красный вечер за куканом<br>
 Расстелил кудрявый бредень.</p>
 
-<p>Под окном от скользких ветел<br>
+<p style="font-family: 'Roboto', sans-serif;">Под окном от скользких ветел<br>
 Перепельи звоны ветра.<br>
 Тихий сумрак, ангел теплый,<br>
 Напоен нездешним светом.</p>
 
-<p>Сон избы легко и ровно<br>
+<p style=" font-family: 'Caveat';">Сон избы легко и ровно<br>
 Хлебным духом сеет притчи.<br>
 На сухой соломе в дровнях<br>
 Слаще меда пот мужичий.</p>
 
-<p>Чей-то мягкий лик за лесом,<br>
+<p style=" font-family: 'Lobster';">Чей-то мягкий лик за лесом,<br>
 Пахнет вишнями и мохом…<br>
 Друг, товарищ и ровесник,<br>
 Помолись коровьим вздохам.</p>
 
-1916
+<i>1916</i>
 </body>
 </html>
