--- a/Home/04_HTML/Base/DIV_Frame.html
+++ b/Home/04_HTML/Base/DIV_Frame.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>
+        Бериллий — элемент главной подгруппы второй группы, второго периода 
+        периодической системы химических элементов Д. И. Менделеева, с атомным номером 4.
+         Обозначается символом Be (лат. Beryllium). Высокотоксичный элемент.
+          Простое вещество бериллий — относительно твёрдый металл светло-серого цвета.
+    </div>
 </body>
 </html>
