--- a/Home/04_HTML/Base/DIV_Frame.html
+++ b/Home/04_HTML/Base/DIV_Frame.html
@@ -7,11 +7,25 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
+   <div style="background-image:url(ramka_cut-photo\ right\ up.ru.png) ;
+   background-repeat: no-repeat;
+   background-position: right top;
+   margin: 100px 200px; ">
+
+ 
+   <div style="background-image: url(ramka_cut-photo\ right\ down.ru.png); 
+  background-repeat: no-repeat; 
+  background-position: right bottom ;
+  margin: 100px 300px;">
+
+    <div style="font-size: 45px; 
+    padding: 50px;">
         Бериллий — элемент главной подгруппы второй группы, второго периода 
         периодической системы химических элементов Д. И. Менделеева, с атомным номером 4.
          Обозначается символом Be (лат. Beryllium). Высокотоксичный элемент.
           Простое вещество бериллий — относительно твёрдый металл светло-серого цвета.
+     </div>
     </div>
+  </div> 
 </body>
 </html>
